Bug 79133 - Impress: mediaplayer start crashes LO
Summary: Impress: mediaplayer start crashes LO
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.3.0.0.beta1
Hardware: x86-64 (AMD64) All
: medium critical
Assignee: Not Assigned
URL:
Whiteboard: target:4.4.0 target:4.3.0.0.beta2
Keywords: haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2014-05-23 15:34 UTC by Dominik
Modified: 2014-05-25 13:24 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dominik 2014-05-23 15:34:49 UTC
On Windows 7 x64, when in a Impress document and starting the mediaplayer (via tools-> mediaplayer) LO crashes.
installed VLC version is 2.1.3
Comment 1 Julien Nabet 2014-05-24 16:13:57 UTC
Here's a part of bt:
Program received signal SIGSEGV, Segmentation fault.
0x00002aaac8fbf228 in avmedia::priv::MediaEventListenersImpl::cleanUp (this=0x0) at /home/julien/compile-libreoffice/libreoffice/avmedia/source/viewer/mediaevent_impl.cxx:48
48	    Application::RemoveMouseAndKeyEvents( reinterpret_cast< ::Window* >( mpNotifyWindow ) );
(gdb) bt
#0  0x00002aaac8fbf228 in avmedia::priv::MediaEventListenersImpl::cleanUp (this=0x0)
    at /home/julien/compile-libreoffice/libreoffice/avmedia/source/viewer/mediaevent_impl.cxx:48
#1  0x00002aaac8fc3f02 in avmedia::priv::MediaWindowImpl::~MediaWindowImpl (this=0x9501e50, __in_chrg=<optimized out>)
    at /home/julien/compile-libreoffice/libreoffice/avmedia/source/viewer/mediawindow_impl.cxx:181
#2  0x00002aaac8fc4288 in avmedia::priv::MediaWindowImpl::~MediaWindowImpl (this=0x9501e50, __in_chrg=<optimized out>)
    at /home/julien/compile-libreoffice/libreoffice/avmedia/source/viewer/mediawindow_impl.cxx:207

Zolnai: it seems this commit
http://cgit.freedesktop.org/libreoffice/core/commit/?id=4ec3554a80f065c2d9c957d6ce7f577fb195be02
solved this.
Would it be possible you cherry-pick it on 4.3 and 4.2? (I can do it if you want)
Comment 2 Julien Nabet 2014-05-24 16:15:27 UTC
Put it at All since initial report concerned Windows and I reproduced this on Linux.
I added have-backtrace even if I just gave a small part of it on my previous comment but I can provide a more complete one if needed.
Comment 3 Tamás Zolnai 2014-05-24 19:58:56 UTC
Hi,

I already realized this problem and fixed it with:
http://cgit.freedesktop.org/libreoffice/core/commit/?id=4ec3554a80f065c2d9c957d6ce7f577fb195be02
on master. I will push it to the 4.3 branch ASAP.
Comment 4 Commit Notification 2014-05-25 13:21:35 UTC
Zolnai Tamas committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4cf32fcaf3e5ed442874b59e0995829630153f90&h=libreoffice-4-3

fdo#79133: avoid segmentation fault during destruction of media window


It will be available in LibreOffice 4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.