fdo#79133: avoid segmentation fault during destruction of media window

mpEvents is not initialized in the constructor any more:
b5529c8c457f442bfc43305becc0c02d6a09ee80
So it can happen that mpEvents is null.


(cherry picked from commit 4ec3554a80f065c2d9c957d6ce7f577fb195be02)

Change-Id: Idaaa274e39c1ac34270ae5b0acdd237ee5aec1c3